Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1095 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -7,6 +7,7 @@
      * [UtilsWindows Useful utilities on Windows]
   * *[XmlScenario Inputs: creating a scenario]*
      * [XmlMonitoring Monitoring measures]
+     * [XmlEntoVector Vector-transmission parameters]
   * *[OutputFiles Outputs: interpreting results]*
      * LiveGraph
 
