--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -137,12 +137,57 @@ Regarding costing, sometimes in severe cases 2 tests would be used (by a referri
 
 Decisions described in the XML are all given as a `decision` element who's content is some form of tree; there are currently two varieties as in the table below. The syntax for a tree is:
 
-<placeholder>
+{{{
+// a symbol is one or more characters in the set: a-z A-Z 0-9 . _
+symbol = ( alnum | '.' | '_' )+
+// double_ means a floating-point number; a range looks like: x-y
+range = double_ '-' double_
+
+// types of values: a symbol, a number, or a numeric range
+value_symbol = symbol
+value_double = double_
+value_range = range
+
+// an outcome either looks like { <tree> } (where <tree> is another whole tree)
+// or like :<symbol> (where <symbol> is some symbol)
+outcome = ( '{' tree '}' ) | ( ':' symbol )
+
+// a branch looks like: X(Y)
+// if X is "p" we have a probability branch; if it's "age" we have an age-range;
+// otherwise X should be the name of a decision and Y one of the decision's outcomes
+branch_p = "p" '(' value_double ')' outcome
+branch_age = "age" '(' value_range ')' outcome
+branch_decision = symbol '(' value_symbol ')' outcome
+
+// A branch set is a list of one of more branches (all of the
+// same type and, if decision branches, for the same decision).
+// In whichever relevant way the set must be complete: probabilities
+// add up to 1 or all outcomes of some decision be represented.
+branch_set = ( branch_p | branch_age | branch_decision ) +
+
+// A tree is either a branch set, or simply be an outcome.
+// This is the "entry point" -- describing the whole decision --
+// but can also occur as a sub-tree.
+tree = branch_set | symbol
+}}}
+
+Besides the special "age" and "p" cases (see table below), this allows us to determine an outcome based on another decision (this decision must, then, be listed under `depends`). Note that a decision used as a branch point (or "p" or "age") may be used again in a sub-tree (in particular, using multiple random trees may simplify writing decisions).
 
 | age-dependent | The tree must have exactly one dependency: `age`. Branches should be identified with the syntax `age(a-b)` where a and b are in the range `[0,inf]` (allowing the special value `inf`). In a branch-set these ranges must not overlap and must cover the entire range `[0,inf]` (i.e. lowest bound must be `0` and highest `inf` with matching boundaries). Age ranges are considered half-open, open at the top (i.e. an age on a boundary matches the higher age-group). |
 | stochastic | A generic decision whose outcomes are determined by input decisions and/or random samples. Unless purely deterministic, `p` must be used as in input dependency and then probability branches may be specified using `p(x)` where `x` is the probability of the branch being chosen. All probabilities in a branch-set must add up to 1. |
 
 ===== `treatments` =====
+
+The `treatments` element consists of a list of `treatment` elements. Each `treatment` element has a `name` attribute (which must correspond to one of the outcomes of the `treatments` decision), a `schedule` element and a list of zero-or-more `modifier` elements.
+
+The `schedule` element describes the base schedule of medications taken: a list of `medicate` elements describing each drug dose given (by `drug` code, dose in `mg`, and `hour` after start of case-management at which taken).
+
+Since one base schedule may be well or poorly adhered to in several variations, we have `modifier` elements. Each modifier corresponds to one `decision` and has one of three types (see table below). Each of these consists of a list of sub-elements, each of which have attributes `value` (the decision's outcome), `effect` (effect of the modifier per drug-code prescribed; of the form `DRUG1(x),DRUG2(y)` where x and y are effects as described below), and optionally the boolean attribute `affectsCost` (whether costs are modified in the same way as the doses administered; defaults to one if not present; can be used to simulate low-quality drugs at standard cost and vomited doses).
+
+| sub-element name | description |
+| `multiplyQty` | multiplies dose size; useful for age-specific dosing and poor-quality drugs |
+| `delay` | delays each dose by the given number of hours; can be used for delayed arrival to a health facility but this won't affect the start/end time of the bout of illness |
+| `selectTimeRange` | Causes doses outside the time range given to be missed (also not costed unless `affectsCost` is set false). The range `x-y` is interpreted as a half-open interval; for dose at time `t` to be taken we must have `x <= t < y`. |
 
 ==== Severe-fever outcomes: `ClinicalOutcomes` ====
 
