Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1110 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/OutputFiles.wiki
+++ b/wiki/OutputFiles.wiki
@@ -4,8 +4,8 @@
 
 There are currently two statistical output files:
 
-  * output.txt — three-dimensional (survey, measure and often age-group) general statistics
-  * vector.txt — two-dimensional (time-step and measure) statistics from the vector transmission model
+  * [OutputFiles#output.txt output.txt] — three-dimensional (survey, measure and often age-group) general statistics
+  * [OutputFiles#ctsout.txt ctsout.txt] — two-dimensional (time-step and measure) statistics from the vector transmission model
 
 Both consist of lines of tab-separated values.
 
