Edited wiki page through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@1116 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -26,5 +26,4 @@
   * [ModelPathogenesis Morbidity models]
   * [ModelClinical Clinical episode, case management, and mortality models]
   * [ModelDrug Drug (PKPD) action & resistance models]
-
-  * [XmlScenario#Interventions:_interventions List of interventions]
+  * [ModelInterventions Intervention deployment and descriptions]
